<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <!-- Solo en la categoría "Favoritos" (ver StreamListActivity.onCreateOptionsMenu) -->
    <item
        android:id="@+id/action_order_favorites"
        android:title="@string/favorites_order_menu"
        app:showAsAction="never" />

    <!-- Solo en la categoría "Continuar viendo" -->
    <item
        android:id="@+id/action_clear_continue"
        android:title="@string/continue_clear"
        app:showAsAction="never" />

    <!-- Comprueba qué canales de esta categoría ya no responden (ver ChannelChecker) -->
    <item
        android:id="@+id/action_check_channels"
        android:title="@string/channel_check_menu"
        app:showAsAction="never" />

    <!-- Canales que se ocultaron con la pulsación larga, para volver a mostrarlos -->
    <item
        android:id="@+id/action_hidden_channels"
        android:title="@string/channel_hidden_menu"
        app:showAsAction="never" />

</menu>
