<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_epg_grid"
        android:title="@string/action_epg_grid"
        android:icon="@android:drawable/ic_menu_agenda"
        app:showAsAction="ifRoom" />

    <!-- Icono/título reales los pone MainActivity.updateThemeMenuItem según
         el modo actual (sol/luna); esto es solo el valor inicial. -->
    <item
        android:id="@+id/action_theme_toggle"
        android:title="@string/action_switch_to_light"
        android:icon="@drawable/ic_sun"
        app:showAsAction="ifRoom" />

</menu>
